dataset1235/2025-2/1153765216/users/1370515670/executions/2814675586_2296111720.log
== SUBMISSION (2025-08-26 18:27:23)
-- CODE: 
base = float(input(2.0))
altura = float(input(3.0))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
---- user output:
2.03.036.0
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
---- user output:
2.03.06000.0
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
---- user output:
2.03.0360.0
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
---- user output:
2.03.06.0
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
---- user output:
2.03.01000.0
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
---- user output:
2.03.083.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:27:13)
-- CODE: 
base = float(input(2.0))
altura = float(input(3.0))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
---- user output:
2.03.036.0
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
---- user output:
2.03.06000.0
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
---- user output:
2.03.0360.0
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
---- user output:
2.03.06.0
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
---- user output:
2.03.01000.0
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
---- user output:
2.03.083.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:25:44)
-- CODE: 
base = float(input(2.0))
altura = float(input(3.0))
area = base * altura
print(int(input(area))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 4
    print(int(input(area))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 4
    print(int(input(area))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 4
    print(int(input(area))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 4
    print(int(input(area))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 4
    print(int(input(area))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 4
    print(int(input(area))
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:23:45)
-- CODE: 
base = float(input(2))
altura = float(input(3))
area = base * altura
print(input(area))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(area))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(area))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(area))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(area))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(area))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(area))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:23:37)
-- CODE: 
base = float(input(2))
altura = float(input(3))
area = base * altura
print(input(area))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(area))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(area))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(area))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(area))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(area))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(area))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:25:37)
-- CODE: 
base = float(input(2.0))
altura = float(input(3.0))
area = base * altura
print(int(input(area))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 4
    print(int(input(area))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 4
    print(int(input(area))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 4
    print(int(input(area))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 4
    print(int(input(area))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 4
    print(int(input(area))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 4
    print(int(input(area))
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:24:26)
-- CODE: 
base = float(input(2.0))
altura = float(input(3.0))
area = base * altura
print(input(area))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(area))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(area))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(area))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(area))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(area))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input(area))
          ^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
